# magic-cta-pipe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.bib  CrabNebula.yaml  CrabNebula_2019-11-27_radec.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  add_orig_mc_tree.py  apply_rfs.py  apply_rfs_MAGIC_LST.py  apply_rfs_stereo.py  apply_rfs_theta2.py  cleaning_analysis.py  cleaning_comp.py  convert_superstar_to_dl1.py  download_data.sh  download_test_data.sh  effective_area_melibea.py  environment.yml  event_processing.py  gti.py  gti_generator.py  hillas_preprocessing.py  hillas_preprocessing_MAGICCleaning.py  hillas_preprocessing_MAGICCleaning_stereo.py  hillas_preprocessing_MAGICCleaning_stereo_mars.py  hillas_preprocessing_stereo.py  magic_cal_to_dl1.py  magic_lst_event_coincidence.ipynb  magic_lst_event_coincidence.py  magic_lst_stereo_calc.py  make_event_lists.py  make_irf.py  make_irf_MAGIC_LST.py  make_irfs_MAGIC_LST.py  make_irfs_MAGIC_LST_OLD.py  (+19 more)
.github/: release-drafter.yml
.github/.workflows/: ci.yml
.github/workflows/: ci.yml  deploy.yml
Finished_scripts/: access_pixel_info_file.py  get_images_and_pixel_info.py  get_images_and_pixel_info_config.yaml
LST-1_MAGIC/: config.yaml  lst1_magic_data_event_coincidence.py  lst1_magic_data_stereo_reco.py  lst1_magic_event_coincidence.py  lst1_magic_mc_dl0_to_dl1.py  lst1_magic_mc_dl0_to_dl1_stereo.py  lst1_magic_stereo_calc.py  lst1_magic_stereo_reco.py  lst1_magic_train_direction_rf.py  lst1_magic_train_energy_rf.py  magic_cal_to_dl1.py  magic_data_cal_to_dl1.py  merge_h5_files.py  merge_mc_run_files.py  merge_subrun_files.py
comparison/: cleaning_analysis.py  params_labels.txt
config/: CrabNebula.yaml  CrabNebula_ejobst.yaml  CrabNebula_ejobst_MAGICCleaning.yaml  coach.rc  config_MAGIC_LST.yaml  dummy.yaml  magic-cta-pipe_config_stereo.yaml
data/: MARS_4LST.txt  MARS_MAGIC.txt
docs/: Makefile  conf.py  index.rst  usage.rst
docs/_static/: magicctapipe.css  switcher.json
docs/developer-guide/: code-guidelines.rst  getting-started.rst  index.rst  maintainer-info.rst  pull-requests.rst  style-guide.rst
docs/source/: conf.py  index.rst  usage.rst
docs/user-guide/: IT_analysis_NSB.rst  IT_analysis_data_MC.rst  getting-started.rst  index.rst  magic-lst-scripts.rst
lst1_magic/: __init__.py  check_coincidence_overview.py  check_pointing.py  config.yaml  lst1_magic_apply_rfs.py  lst1_magic_data_check_pointings.py  lst1_magic_data_event_coincidence.py  lst1_magic_data_stereo_reco.py  lst1_magic_dl1_to_dl2.py  lst1_magic_event_coincidence.py  lst1_magic_mc_dl0_to_dl1.py  lst1_magic_stereo_reco.py  lst1_magic_train_classifier_rf.py  lst1_magic_train_rfs.py  magic_data_cal_to_dl1.py
lst1_magic/data/: config.yaml  magic_lst_common_list_20211018.xlsx
lst1_magic/notebooks/: check_coincidence_performance.ipynb  check_data_quality.ipynb  check_signal_from_source.ipynb  check_spectrum.ipynb  magic_lst_event_coincidence.ipynb
magicctapipe/: __init__.py  _dev_version.py  conftest.py  version.py
magicctapipe/config/: CrabNebula.yaml  config_MAGIC_LST.yaml  magic-cta-pipe_config_stereo.yaml
magicctapipe/data/: MAGIC_Sensitivity_magicmpp.txt  MARS_4LST.txt  MARS_MAGIC.txt  MARS_MAGIC_LST1.txt
magicctapipe/image/: __init__.py  calib.py  cleaning.py  leakage.py  modifier.py
magicctapipe/io/: __init__.py  containers.py  dl1_extender.py  gadf.py  io.py
magicctapipe/irfs/: __init__.py  utils.py
magicctapipe/jobs/: __init__.py  create_dl3_index_files_jobs.py  lst1_magic_create_irf_jobs.py  lst1_magic_dl1_stereo_to_dl2_jobs.py  lst1_magic_dl2_to_dl3_jobs.py  lst1_magic_event_coincidence_jobs.py  lst1_magic_mc_dl0_to_dl1_jobs.py  lst1_magic_stereo_reco_jobs.py  lst1_magic_train_rfs_jobs.py  magic_calib_to_dl1_create_job.py  magic_calib_to_dl1_jobs.py  merge_hdf_files_jobs.py
magicctapipe/reco/: __init__.py  classifier_utils.py  direction_utils.py  energy_utils.py  estimators.py  event_processing.py  global_utils.py  image.py  processors.py  reco.py  stereo.py
magicctapipe/resources/: LST_runs.txt  MAGIC_runs.txt  config.yaml  config_general.yaml  config_monly.yaml  database_config.yaml  lidar_reports_clouds_ST.03.16.yaml  lstchain_standard_config_modified.json  test_check_list.yaml  test_config.yaml  test_config_auto_MCP_4LST.yaml  test_config_calib.yaml  test_config_general.yaml  test_config_general_4LST.yaml  test_config_monly.yaml  test_config_preoffset.yaml
magicctapipe/scripts/: __init__.py  add_orig_mc_tree.py  convert_superstar_to_dl1.py  hillas_preprocessing.py  hillas_preprocessing_stereo.py  make_event_lists.py  make_irf.py
magicctapipe/train/: __init__.py  classifier_utils.py  direction_utils.py  energy_utils.py  event_processing.py  global_utils.py  utils.py
magicctapipe/utils/: MAGIC_Badpixels.py  MAGIC_Cleaning.py  __init__.py  badpixels.py  camera_geometry.py  cleaning.py  error_codes.py  filedir.py  functions.py  gti.py  leakage.py  merge_hdf_files.py  modifier.py  my_functions.py  plot.py  processors.py  tels.py  utils.py
notebooks/: check_aeff_DL3.ipynb  check_event_coincidence.ipynb  check_flux_from_dl3.ipynb  check_flux_from_dl3_ebl_deabs.ipynb  check_irfs_from_dl2.ipynb  check_sed_from_dl3.ipynb  check_signal.ipynb  check_signal_from_dl2.ipynb  joint_data_quality.ipynb
nsb_scripts/: LSTnsb.py  PG1553_config_general.yaml  README.md  collect_nsb.py  config_general.yaml  list_from_h5.py  nsb.sh  nsb_DL1_to_DL2.py  nsb_DL2_to_DL3.py  nsb_coincident_events.py  nsb_level.py  nsb_merge_DL2.py  nsb_merge_M1_M2_night.py  nsb_merge_M1_M2_runs.py  nsb_merge_subruns.py  nsb_merging_runs_and_spliting_training_samples.py  nsb_setting_up_config_and_dir.py  nsb_stereo_events.py
nsb_scripts/spreadsheets/: GoogleSheets_to_h5.py  README.md  (+2 more)
utils/: MAGIC_Badpixels.py  MAGIC_Cleaning.py  MAGIC_StereoCalc.py  __init__.py  calc_impact.py  check_data_quality.py  cleaning.py  create_links_to_lst_data.sh  create_links_to_magic_data.sh  fitting.py  get_common_obs_info.py  merge_files.py  merge_hdf_files.py  modifier.py  my_functions.py  processors.py  quantities.py  timing.py
(+202 files in other folders)
