[metadata]
name = magic-cta-pipe
description = pipeline for the analysis of joint MAGIC+LST-1 data
long_description = file: README.md
long_description_content_type = text/markdown
author = magic-cta-pipe developers
author_email = alessioberti90@gmail.com
license = BSD 3-Clause
url = https://github.com/cta-observatory/magic-cta-pipe

project_urls =
    Bug Tracker = https://github.com/cta-observatory/magic-cta-pipe/issues
    Source Code = https://github.com/cta-observatory/magic-cta-pipe

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[flake8]
exclude = build,docs,.eggs
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E501,W503,E203,W201
per-file-ignores =
    */__init__.py: F401, F403
