[metadata]
name = magic-cta-pipe
description = pipeline for the analysis of joint MAGIC+LST-1 data
long_description = file: README.rst
long_description_content_type = text/x-rst
author = magic-cta-pipe developers
author_email = alessioberti90@gmail.com
license = BSD 3-Clause
url = https://github.com/cta-observatory/magic-cta-pipe

project_urls =
    Bug Tracker = https://github.com/cta-observatory/magic-cta-pipe/issues
    Source Code = https://github.com/cta-observatory/magic-cta-pipe

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    ctapipe ~=0.19.2
    lstchain ~=0.10.5
    ctaplot ~=0.6.4
    ctapipe_io_magic ~=0.5.4
    gammapy ~=1.1
    uproot ~=5.0
    pandas
    pyirf ~=0.10.0
    seaborn
    astropy
    bokeh
    eventio >=1.9.1, <2.0.0a0
    h5py
    iminuit >=2
    joblib ~=1.2.0
    matplotlib ~=3.0
    numba
    numpy
    protobuf ~=3.20.0
    scipy
    scikit-learn ~=1.2
    tables
    pymongo
    pyparsing
    jinja2 ~=3.0.2

[options.packages.find]
exclude =
    magicctapipe._dev_version

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    pydata_sphinx_theme
    sphinx_automodapi
    sphinx_argparse
    nbsphinx
    numpydoc
    sphinx-design
    jupyter
    notebook
    pandas
    ipython
dev =
    setuptools_scm[toml]
all =
    %(tests)s
    %(docs)s
    %(dev)s

[options.entry_points]
console_scripts =
    create_dl3_index_files = magicctapipe.scripts.lst1_magic.create_dl3_index_files:main
    lst1_magic_create_irf = magicctapipe.scripts.lst1_magic.lst1_magic_create_irf:main
    lst1_magic_dl1_stereo_to_dl2 = magicctapipe.scripts.lst1_magic.lst1_magic_dl1_stereo_to_dl2:main
    lst1_magic_dl2_to_dl3 = magicctapipe.scripts.lst1_magic.lst1_magic_dl2_to_dl3:main
    lst1_magic_event_coincidence = magicctapipe.scripts.lst1_magic.lst1_magic_event_coincidence:main
    lst1_magic_mc_dl0_to_dl1 = magicctapipe.scripts.lst1_magic.lst1_magic_mc_dl0_to_dl1:main
    lst1_magic_stereo_reco = magicctapipe.scripts.lst1_magic.lst1_magic_stereo_reco:main
    lst1_magic_train_rfs = magicctapipe.scripts.lst1_magic.lst1_magic_train_rfs:main
    magic_calib_to_dl1 = magicctapipe.scripts.lst1_magic.magic_calib_to_dl1:main
    merge_hdf_files = magicctapipe.scripts.lst1_magic.merge_hdf_files:main

[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v

[aliases]
test = pytest

[flake8]
exclude = build,docs,.eggs
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E501,W503,E203,W201
per-file-ignores =
    */__init__.py: F401, F403
