[metadata]
name = magic-cta-pipe
description = pipeline for the analysis of joint MAGIC+LST-1 data
long_description = file: README.rst
long_description_content_type = text/x-rst
author = magic-cta-pipe developers
author_email = alessioberti90@gmail.com
license = BSD 3-Clause
url = https://github.com/cta-observatory/magic-cta-pipe

project_urls =
    Bug Tracker = https://github.com/cta-observatory/magic-cta-pipe/issues
    Source Code = https://github.com/cta-observatory/magic-cta-pipe

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    ctapipe >=0.25.0
    lstchain 
    ctaplot 
    gammapy ~=1.3
    uproot 
    pandas
    pyirf
    seaborn
    astropy
    bokeh
    eventio 
    h5py
    iminuit >=2
    joblib 
    matplotlib 
    numba
    numpy
    protozfits >=2.5,<3
    scipy >=1.8, <1.12
    scikit-learn 
    tables
    pymongo
    pyparsing
    jinja2 ~=3.0.2

[options.packages.find]
exclude =
    magicctapipe._dev_version

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    pydata_sphinx_theme
    sphinx_automodapi
    sphinx_argparse
    nbsphinx
    numpydoc
    sphinx-design
    jupyter
    notebook
    pandas
    ipython
dev =
    setuptools_scm[toml]
all =
    %(tests)s
    %(docs)s
    %(dev)s

[options.package_data]
* = resources/*

[options.entry_points]
console_scripts =
    create_dl3_index_files = magicctapipe.scripts.lst1_magic.create_dl3_index_files:main
    lst1_magic_create_irf = magicctapipe.scripts.lst1_magic.lst1_magic_create_irf:main
    lst1_magic_dl1_stereo_to_dl2 = magicctapipe.scripts.lst1_magic.lst1_magic_dl1_stereo_to_dl2:main
    lst1_magic_dl2_to_dl3 = magicctapipe.scripts.lst1_magic.lst1_magic_dl2_to_dl3:main
    lst1_magic_event_coincidence = magicctapipe.scripts.lst1_magic.lst1_magic_event_coincidence:main
    lst1_magic_mc_dl0_to_dl1 = magicctapipe.scripts.lst1_magic.lst1_magic_mc_dl0_to_dl1:main
    lst1_magic_stereo_reco = magicctapipe.scripts.lst1_magic.lst1_magic_stereo_reco:main
    lst1_magic_train_rfs = magicctapipe.scripts.lst1_magic.lst1_magic_train_rfs:main
    magic_calib_to_dl1 = magicctapipe.scripts.lst1_magic.magic_calib_to_dl1:main
    merge_hdf_files = magicctapipe.scripts.lst1_magic.merge_hdf_files:main
    tune_magic_nsb = magicctapipe.scripts.lst1_magic.tune_magic_nsb:main
    check_MAGIC_runs = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.check_MAGIC_runs:main
    coincident_events = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.coincident_events:main
    create_LST_table = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.create_LST_table:main  
    dl1_production = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.dl1_production:main
    job_accounting = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.job_accounting:main
    list_from_h5 = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.list_from_h5:main
    lstchain_version = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.lstchain_version:main
    LSTnsb = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.LSTnsb:main 
    merge_stereo = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.merge_stereo:main   
    merging_runs = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.merging_runs:main
    nsb_level = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.nsb_level:main   
    nsb_to_h5 = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.nsb_to_h5:main   
    stereo_events = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.stereo_events:main
    update_MAGIC_database = magicctapipe.scripts.lst1_magic.semi_automatic_scripts.database_production.update_MAGIC_database:main

[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v

[aliases]
test = pytest

[flake8]
exclude = build,docs,.eggs
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E501,W503,E203,W201
per-file-ignores =
    */__init__.py: F401, F403
